--- a/src/style.css
+++ b/src/style.css
@@ -2,4 +2,15 @@
 
 body {
     font-family: "M PLUS Rounded 1c", sans-serif;
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        width: auto;
+    }
 }
